--- a/_pages/cloud.html
+++ b/_pages/cloud.html
@@ -14,8 +14,9 @@ author_profile: true
   {% assign items = site.tags | sort %}
   {% for item in items %}
     {% assign num = item.last.size %}
-    {% if num > 12 %}{% assign num = 12 %}{% endif %}
-    <span style="font-size: {{ num | times: 5 | plus: 70 }}%">
+    {% assign factor = num %}
+    {% if factor > 10 %}{% assign factor = 10 %}{% endif %}
+    <span style="font-size: {{ factor | times: 10 | plus: 60 }}%">
       <a href="/concerts/tags/#{{ item | first | slugify }}">{{ item | first | replace:'-',' ' }}</a>
       ({{ num }})
     </span>
@@ -33,8 +34,9 @@ author_profile: true
   {% assign items = site.categories | sort %}
   {% for item in items %}
     {% assign num = item.last.size %}
-    {% if num > 12 %}{% assign num = 12 %}{% endif %}
-    <span style="font-size: {{ num | times: 5 | plus: 70 }}%">
+    {% assign factor = num %}
+    {% if factor > 10 %}{% assign factor = 10 %}{% endif %}
+    <span style="font-size: {{ factor | times: 10 | plus: 60 }}%">
       <a href="/concerts/categories/#{{ item | first | slugify }}">{{ item | first | replace:'-',' ' }}</a>
       ({{ num }})
     </span>
