--- a/_pages/cloud.html
+++ b/_pages/cloud.html
@@ -4,6 +4,8 @@ permalink: /cloud/
 title: "Cloud"
 author_profile: true
 ---
+{% include minimenu.html %}
+
 <h2>
   <i class="fa fa-fw fa-music" aria-hidden="true"></i>
   Artists
