Improves banner and card images

--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -1,7 +1,8 @@
 ---
 layout: categories
 permalink: /categories/
-title: "Concerts by venue"
+title: "Concerts"
+excerpt: "by venue"
 author_profile: true
 ---
 {% include minimenu.html %}
