--- a/_pages/cloud.html
+++ b/_pages/cloud.html
@@ -1,7 +1,8 @@
 ---
 layout: archive
 permalink: /cloud/
-title: "Cloud"
+title: "Concerts"
+excerpt: "cloud"
 author_profile: true
 ---
 {% include minimenu.html %}
