--- a/_pages/date-archive.html
+++ b/_pages/date-archive.html
@@ -1,7 +1,8 @@
 ---
 layout: posts
 permalink: /
-title: "Concerts by date"
+title: "Concerts"
+excerpt: "by date"
 author_profile: true
 ---
 {% include minimenu.html %}
