--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -1,7 +1,8 @@
 ---
 layout: tags
 permalink: /tags/
-title: "Concerts by artist"
+title: "Concerts"
+excerpt: "by artist"
 author_profile: true
 ---
 {% include minimenu.html %}
