--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -1,8 +1,7 @@
 ---
 layout: categories
 permalink: /categories/
-title: "Concerts"
-excerpt: "by venue"
+title: "Concerts by venue"
 author_profile: true
 ---
 {% include minimenu.html %}
