--- a/_pages/cloud.html
+++ b/_pages/cloud.html
@@ -1,8 +1,7 @@
 ---
 layout: archive
 permalink: /cloud/
-title: "Concerts"
-excerpt: "cloud"
+title: "Concerts cloud"
 author_profile: true
 ---
 {% include minimenu.html %}
