--- a/_pages/date-archive.html
+++ b/_pages/date-archive.html
@@ -1,8 +1,7 @@
 ---
 layout: posts
 permalink: /
-title: "Concerts"
-excerpt: "by date"
+title: "Concerts by date"
 author_profile: true
 ---
 {% include minimenu.html %}
