--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -1,8 +1,7 @@
 ---
 layout: tags
 permalink: /tags/
-title: "Concerts"
-excerpt: "by artist"
+title: "Concerts by artist"
 author_profile: true
 ---
 {% include minimenu.html %}
